--- a/src/pages/digiCoach.astro
+++ b/src/pages/digiCoach.astro
@@ -24,43 +24,61 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
           </section>
 
         <section>
-                    <h2>DigiCOACH Support for CALI Reads</h2>
-                    <p style='text-align:center;'>To learn more about how to use digiCOACH, <a href='visit digiCOACH.com/calireads.html'>visit digiCOACH.com/calireads.html</a></p>
-             </section>
+            <h2>DigiCOACH Support for CALI Reads</h2>
+                    <div class='flex-row'>
+                     <div class='flex-item'>
+                       <p >To learn more about how to use digiCOACH 
+                         
+                     
+                       <a href='https://digiCOACH.com/calireads.html'>Visit digiCoach.com/calireads</a></p>
+                     </div>
+                    </div>
+                    
+                </section> 
 
             <section >
                 <h2>HOW TO ACCESS DIGICOACH</h2>
-                <h3>How is digiCOACH used in CALI Reads?</h3>
-                <p>Following completion of a CALI Reads training module, teacher participants are asked to conduct 15-20 minute digiCOACH walkthroughs to help refine instructional practice for a focal literacy practice. To get the most out of walkthroughs, teachers should conduct them at three points in time: self-rating, peer walkthrough, and coach/instructional leader walkthrough.</p>
-                <p><strong>During a walkthrough, the observer will:</strong></p>
-                <ol>
-                    <li>Identify key Look Fors across Literacy Focus Areas</li>
-                    <li>Select Strategy/Routine specific Coaching Tips</li>
-                    <li>Send a follow-up email with the feedback</li>
-                </ol>
-                <p><strong>Support:</strong> For questions on how you should be using digiCOACH for the project, contact your CALI Reads Site Coach.
-                </p>
-                </section>
+               <div class='flex-row'>
+                <div class='flex-item'>
+                    <h3>How is digiCOACH used in CALI Reads?</h3>
+                    <p>Following completion of a CALI Reads training module, teacher participants are asked to conduct 15-20 minute digiCOACH walkthroughs to help refine instructional practice for a focal literacy practice. To get the most out of walkthroughs, teachers should conduct them at three points in time: self-rating, peer walkthrough, and coach/instructional leader walkthrough.</p>
+                    <p><strong>During a walkthrough, the observer will:</strong></p>
+                    <ol>
+                        <li>Identify key Look Fors across Literacy Focus Areas</li>
+                        <li>Select Strategy/Routine specific Coaching Tips</li>
+                        <li>Send a follow-up email with the feedback</li>
+                    </ol>
+                    <p><strong>Support:</strong> For questions on how you should be using digiCOACH for the project, contact your CALI Reads Site Coach.
+                    </p>
+                </div>
+               </div>
+               
 
-                <section >
-                    <h3>How can I download the digiCOACH app?</h3>
-                    <p>To access digiCOACH walkthroughs, you will need the digiCOACH mobile app. All CALI Reads iPads come with the app downloaded and ready for your personal log in.</p>
-                    <p>Support: To download the digiCOACH app onto other devices, go to digiCOACH.com/install.html or search the app store from your device.</p>
-                </section>
+                <div class='flex-row'>
+                    <div class='flex-item'>
+                        <h3>How can I download the digiCOACH app?</h3>
+                        <p>To access digiCOACH walkthroughs, you will need the digiCOACH mobile app. All CALI Reads iPads come with the app downloaded and ready for your personal log in.</p>
+                        <p>Support: To download the digiCOACH app onto other devices, go to <a href='https://digiCOACH.com/install.html'>digiCOACH.com/install.html</a> or search the app store from your device.</p>
+                    </div>
+                </div>
+                   
+               
+                <div class='flex-row'>
 
-                <section >
-
-                    <h3>How do I access my personal digiCOACH account?</h3>
+                    <div class='flex-item'>
+                        <h3>How do I access my personal digiCOACH account?</h3>
                     <p>You should have received an email from digiCOACH (search email for: digiCOACH Account Activated) with instructions and a link to where you can create your account password.</p>
-                    <p>Note: Keep your password handy for log in.</p>
-                    <p>Support: If you did NOT receive a digiCOACH invitation email, request one at info@calireads.org.</p>
-                </section>
-
-                <section class='digi'>
-                   <div>
-                    <h3>How do I log into the digiCOACH Mobile App?</h3>
+                    <p><strong>Note:</strong> Keep your password handy for log in.</p>
+                    <p><strong>Support:</strong> If you did NOT receive a digiCOACH invitation email, request one at <a href='mailto:info@calireads.org'>info@calireads.org</a>.</p>
+                    </div>
+                </div>
+        
+                   <div class='flex-row'>
+                    <div class='flex-item'>
+                        <h3>How do I log into the digiCOACH Mobile App?</h3>
                     <p>Use your email address and the password you created. Please note, the initial login to the digiCOACH app will take around 90 seconds to complete. When you are logging in, keep your device unlocked and the digiCOACH app active when the spinning icon is on the screen. Once the download completes you will be ready to start your first walkthrough!</p>
                     <p>Support: For questions about your digiCOACH password or support logging in, contact Brandon@digiCOACH.com</p>
+                    </div>
                    </div>
                    
                   
@@ -118,7 +136,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                     flex-direction: column;
                    background: linear-gradient(167deg, rgba(204,204,204,1) 18%, );
                    width:100%;
-                 
+                   
                 }
 
                 .flex-row{
@@ -131,7 +149,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                 
                 }
                 .flex-item{
-                    width:600px;
+                    width:700px;
 	                align-items: baseline;
 	                justify-content:center;
                 }
@@ -175,7 +193,9 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                     display: flex;
                 }
 
-               
-
+               a:link{
+                text-decoration: underline;
+               }
+              
                 
             </style>
