--- a/src/pages/get-the-gist.astro
+++ b/src/pages/get-the-gist.astro
@@ -23,7 +23,7 @@ import { Icon } from 'astro-icon';
 
                  <div class='module-launch'>
                     <a href='/modules#GTG' class='btn'>
-                        <h2>Go To Get The Gist Modules</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
+                        <h2>Go To Get The Gist Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                 </div>
 
                 <div class='section-title'>
