--- a/src/pages/morphology.astro
+++ b/src/pages/morphology.astro
@@ -28,7 +28,7 @@ import MorphologyVideo from '../components/MorphologyVideo.astro';
 
             <div class='module-launch'>
                 <a href='/modules#morphology' class='btn'>
-                    <h2>Go To Anticipation Reaction Guides Literacy Modules</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
+                    <h2>Go To Anticipation Reaction Guides Literacy Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
             </div>
 
             <div class='section-title'>
