--- a/src/pages/vocabulary-maps.astro
+++ b/src/pages/vocabulary-maps.astro
@@ -18,7 +18,7 @@ import walkthroughImg from '../images/Vocabulary-Maps-Walkthrough.jpg';
 
           <div class='module-launch'>
             <a href='/modules#vocabModules' class='btn'>
-                <h2>Go To The Vocabulary Maps Modules</h2>
+                <h2>Go To The Vocabulary Maps Courses</h2>
                 <Icon name="jam:arrow-circle-right" width='40'/>
             </a>
           </div>
