--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -21,7 +21,7 @@ import { Icon } from 'astro-icon';
 
                 <div class='module-launch'>
                     <a href='/modules#ARGuides' class='btn'>
-                        <h2>Go To Anticipation Reaction Guides Literacy Modules</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
+                        <h2>Go To Anticipation Reaction Guides Literacy Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                 </div>
             
             <div class='section-title'>
