--- a/src/pages/wordbuilder.astro
+++ b/src/pages/wordbuilder.astro
@@ -41,7 +41,7 @@ import { Icon } from 'astro-icon';
 
           <div class='module-launch'>
             <a href='/modules#wordbuilder' aria-label='Wordbuilder Module' class='btn'>
-                <h2>Go To Wordbuilder Modules </h2>&nbsp; 
+                <h2>Go To Wordbuilder Courses </h2>&nbsp; 
                 <Icon name="jam:arrow-circle-right" width='40'/>
             </a>
         </div>
