--- a/src/pages/digiCoach.astro
+++ b/src/pages/digiCoach.astro
@@ -77,7 +77,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                     <div class='flex-item'>
                         <h3>How do I log into the digiCOACH Mobile App?</h3>
                     <p>Use your email address and the password you created. Please note, the initial login to the digiCOACH app will take around 90 seconds to complete. When you are logging in, keep your device unlocked and the digiCOACH app active when the spinning icon is on the screen. Once the download completes you will be ready to start your first walkthrough!</p>
-                    <p>Support: For questions about your digiCOACH password or support logging in, contact Brandon@digiCOACH.com</p>
+                    <p>Support: For questions about your digiCOACH password or support logging in, contact <a href='mailto:Brandon@digiCOACH.com'>Brandon@digiCOACH.com</a></p>
                     </div>
                    </div>
                    
