--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,9 @@ import { Icon } from 'astro-icon';
 <section class="page-content">
     <div class="container" id="features">
       
-      <h2>E-Learning Modules</h2>
+      <h2>Literacy Strategies</h2>
       <p>
-        CALI Reads is proud to offer seven free Adolescent Literacy E-Learning Modules for professional learning. Each module showcases a research-based literacy practice that has been shown to be effective with adolescent learners across content area instruction. Each module takes approximately 2-3 hours to complete. Use the CALI Reads Training Modules to learn how to implement each evidence-based practice across content area instruction to support adolescent literacy. You can make a difference! Get started today! 
+        CALI Reads is proud to offer seven free Adolescent Literacy E-Learning courses for professional learning. Each course showcases a research-based literacy practice that has been shown to be effective with adolescent learners across content area instruction. Each course takes approximately 2-3 hours to complete. Use the CALI Reads Training courses to learn how to implement each evidence-based practice across content area instruction to support adolescent literacy. You can make a difference! Get started today! 
       </p> 
       
       <Features />
