--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,7 +94,8 @@ h4{
   .btn {
     display: inline-block;
     padding: 0.5rem 1rem;
-    border-radius: 5px;
+               border-radius: 7px;
+            box-shadow: 0 7px 0px var(--color-accent);
     background: var(--color-secondary);
     color: var(--color-primary);
     text-transform: uppercase;
@@ -102,6 +103,7 @@ h4{
     letter-spacing: 1px;
     transition: all 0.3s ease;
   }
+  
   
   .logos-small {
     display: none;
