--- a/src/pages/digiCoach.astro
+++ b/src/pages/digiCoach.astro
@@ -9,7 +9,6 @@ import digiGraphic from '../images/digiGraphic.png';
 import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
 ---
 <Layout title="Anticipation Reaction Guide">
-    <Showcase showExtra={false} />
     <section class="page-content">
         <div class="container">
           <section class='flex-row'>
@@ -24,7 +23,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
           </section>
 
         <section>
-            <h2>DigiCOACH Support for CALI Reads</h2>
+            <h3>DigiCOACH Support for CALI Reads</h3>
                     <div class='flex-row'>
                      <div class='flex-item'>
                        <p >To learn more about how to use digiCOACH 
@@ -58,7 +57,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                     <div class='flex-item'>
                         <h3>How can I download the digiCOACH app?</h3>
                         <p>To access digiCOACH walkthroughs, you will need the digiCOACH mobile app. All CALI Reads iPads come with the app downloaded and ready for your personal log in.</p>
-                        <p>Support: To download the digiCOACH app onto other devices, go to <a href='https://digiCOACH.com/install.html'>digiCOACH.com/install.html</a> or search the app store from your device.</p>
+                        <p><strong>Support:</strong> To download the digiCOACH app onto other devices, go to <a href='https://digiCOACH.com/install.html'>digiCOACH.com/install.html</a> or search the app store from your device.</p>
                     </div>
                 </div>
                    
@@ -77,7 +76,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                     <div class='flex-item'>
                         <h3>How do I log into the digiCOACH Mobile App?</h3>
                     <p>Use your email address and the password you created. Please note, the initial login to the digiCOACH app will take around 90 seconds to complete. When you are logging in, keep your device unlocked and the digiCOACH app active when the spinning icon is on the screen. Once the download completes you will be ready to start your first walkthrough!</p>
-                    <p>Support: For questions about your digiCOACH password or support logging in, contact <a href='mailto:Brandon@digiCOACH.com'>Brandon@digiCOACH.com</a></p>
+                    <p><strong>Support:</strong> For questions about your digiCOACH password or support logging in, contact <a href='mailto:Brandon@digiCOACH.com'>Brandon@digiCOACH.com</a></p>
                     </div>
                    </div>
                    
