--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -70,7 +70,7 @@ import { Icon } from 'astro-icon'
       <div class="flex-container">
       <p>The ARG is a routine using an advanced organizer to prompt student thinking about key topics before reading, to document related text evidence during reading, and to reconsider opinions of key topics after reading based on documented evidence. This course demonstrates how to plan and implement instruction of the Anticipation-Reaction Guides (ARGs) to support students’ reading comprehension. </p>
       <ul>
-        <LaunchButton />
+        <LaunchButton url='https://calireads.org/modules/ARGuides/ARG-Full-Program/content/' />
       
           {ARGData.map(ARG => (
             <HTMLButton title={ARG.title} url={ARG.url} buttonText={ARG.buttonText}/>
@@ -484,7 +484,7 @@ import { Icon } from 'astro-icon'
   width: 100%;
       padding: 0px;
       margin-top:-20px;
-      font-size: 2.1ch;   
+      font-size:1.87ch;   
       list-style: none;
       display: flex-end;
 /*
