--- a/src/pages/digiCoach.astro
+++ b/src/pages/digiCoach.astro
@@ -23,9 +23,11 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
           </section>
 
         <section>
-            <h3>DigiCOACH Support for CALI Reads</h3>
+            <h3 class='support-large'>DigiCOACH Support for CALI Reads</h3>
+
                     <div class='flex-row'>
                      <div class='flex-item'>
+
                        <p >To learn more about how to use digiCOACH 
                          
                      
@@ -136,6 +138,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                    background: linear-gradient(167deg, rgba(204,204,204,1) 18%, );
                    width:100%;
                    
+                   
                 }
 
                 .flex-row{
@@ -148,7 +151,7 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                 
                 }
                 .flex-item{
-                    width:700px;
+                    width:760px;
 	                align-items: baseline;
 	                justify-content:center;
                 }
@@ -168,15 +171,19 @@ import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
                     wrap:nowrap;
                 }
 
-        
+        .support-large{
+            font-size: 43px!Important;
+           
+        }
 
                 section h2{
-                    
-                    background-color: var(--color-accent);
-                padding: 2em;
-                color:#fff;
-                border-radius: 17px;
-            box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+                    background-image: linear-gradient(180deg,rgba(174,209,54,0.7) 0%,rgba(10,78,117,0.49) 100%)!important;
+                    background-color:#AED136;
+                    padding: 2em;
+                    color:#fff;
+                    font-weight: 500;
+                    border-radius: 17px;
+                    box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
                 }
 
                 section h3{
