--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -390,7 +390,7 @@ import { Icon } from 'astro-icon'
     <article class='main'>
       <div class='flex-container'>
         <p>A Vocabulary Map is a graphic organizer used to preteach key vocabulary. This course will illustrate how to prepare Vocabulary Maps and how to deliver explicit vocabulary instruction using them.</p>
-      <p>The Vocabulary Map course has 3 sections:</p>
+      <h4>The Vocabulary Map course has 3 sections:</h4>
       <LaunchButton />
       <ul>
         {vocabData.map(vocab => (
@@ -440,7 +440,7 @@ import { Icon } from 'astro-icon'
         <div class='flex-container'>
           <p>WordBuilder Intervention is a free application in the <a href='https://apple.com/'>Apple App Store</a>, the <a href='https://play.google.com/store/apps/details?id=org.napacoe.wordbuilder'>Google Play Store</a> & <a href='http://bit.ly/wordbuilder_int'>The Amazon Store!</a> and a free web version on <a href='https://calireads.org/wordbuilder/'>CALI Reads Wordbuilder</a>. The WordBuilder Intervention course demonstrates how to effectively and systematically deliver teacher-led, small group instruction using this tool to teach struggling readers how to break down, build, and spell multisyllabic words.  </p>
           <LaunchButton />
-        <p>The WordBuilder Intervention course has 4 sections:</p>
+        <h4>The WordBuilder Intervention course has 4 sections:</h4>
        <ul>
         {wbData.map(wordbuilder => (
           <HTMLButton title={wordbuilder.title} url={wordbuilder.url} buttonText={wordbuilder.buttonText}/>
