edits to content

--- a/src/pages/modules.astro
+++ b/src/pages/modules.astro
@@ -8,7 +8,7 @@ import ModuleNav from '../components/ModuleNav.astro';
 
 
 ---
-<ModuleLayout title="Literacy Courses">
+<ModuleLayout title="CALI Reads | Literacy Courses">
     <Showcase showExtra={false} />
     <ModuleNav />
 
