edits to titles

--- a/src/pages/digiCoach.astro
+++ b/src/pages/digiCoach.astro
@@ -8,7 +8,7 @@ import FAQDetail from '../components/FAQDetail.astro';
 import digiGraphic from '../images/digiGraphic.png';
 import overviewFlyer from '../images/CALI_Reads_Overview_Flyer-1.png';
 ---
-<Layout title="Anticipation Reaction Guide">
+<Layout title="CALI Reads | digiCoach ">
     <section class="page-content">
         <div class="container">
           <section class='flex-row'>
