--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+const {title} = Astro.props;
 
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
@@ -6,7 +7,7 @@ import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 ---
-    <BaseHead />
+    <BaseHead title={title}/>
     <body>
     <a href='#page-content' class='skipLink'>skip to content</a>
     <div class='top-container' id='top-container'>
