--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const {title} = Astro.props;
 import Layout from '../layouts/Layout.astro';
 
 import Showcase from '../components/Showcase.astro';
@@ -12,7 +12,7 @@ import { Icon } from 'astro-icon';
 ---
 
 
-<Layout >
+<Layout title={'CALI Reads'}>
 <Showcase  showExtra={true} />
 
 <section class="page-content">
