--- a/src/layouts/ModuleLayout.astro
+++ b/src/layouts/ModuleLayout.astro
@@ -5,6 +5,7 @@ import Header from '../components/Header.astro';
 import BackToTop from '../components/BackToTop.astro';
 import Footer from '../components/Footer.astro';
 
+import Favicon from '../images/iconified/favicon.ico';
 import '../styles/global.css';
 
 
@@ -19,6 +20,8 @@ import '../styles/global.css';
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href='../fonts/Poppins/poppins-regular-webfont.woff2' as="font" type="font/woff2" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap' rel='stylesheet'>
+    <link rel="shortcut icon" href={Favicon} type="image/x-icon" />
+    
     <title>{title}</title>
 </head>
 <body>
