added vimeo links

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -83,7 +83,7 @@ import { Icon } from 'astro-icon'
     </article>
     <div class='media-button-container'>
       <div>
-        <MediaButton title="Anticipation Reaction Guides Training Webinar" url={}/>
+        <MediaButton title="Anticipation Reaction Guides Training Webinar" url={'https://vimeo.com/showcase/10308780'}/>
       </div>
       
       </div>
@@ -127,7 +127,7 @@ import { Icon } from 'astro-icon'
   </div>
       </article>
       <div class='media-button-container'>
-        <MediaButton title='Get The Gist Training Webinar' url={}/>
+        <MediaButton title='Get The Gist Training Webinar' url={'https://vimeo.com/showcase/10308781'}/>
       </div>
       <aside class="main"> 
         <div class='imgHolder'>
@@ -188,10 +188,10 @@ import { Icon } from 'astro-icon'
       </article>
       <div class='media-button-container'>
         <div>
-         <MediaButton title='Morphology Training Webinar' url={}/> 
+         <MediaButton title='Morphology Training Webinar' url={'https://vimeo.com/showcase/10308693'}/> 
         </div>
         <div>
-         <MediaButton title='Morphology Demonstration Videos' url={}/> 
+         <MediaButton title='Morphology Demonstration Videos' url={'https://vimeo.com/showcase/10308701'}/> 
         </div>
        </div>
       <aside class="aside aside 1">
@@ -250,10 +250,10 @@ import { Icon } from 'astro-icon'
         </article>
       <div class='media-button-container'>
        <div>
-        <MediaButton title='Reciprocal Teaching Training Webinar' url={}/> 
+        <MediaButton title='Reciprocal Teaching Training Webinar' url={'https://vimeo.com/showcase/10308715'}/> 
        </div>
        <div>
-        <MediaButton title='Reciprocal Teaching Demonstration Videos' url={}/> 
+        <MediaButton title='Reciprocal Teaching Demonstration Videos' url={'https://vimeo.com/showcase/10308718'}/> 
        </div>
       </div>
       <footer class='footer'>
@@ -438,7 +438,8 @@ import { Icon } from 'astro-icon'
     
       <article class='main'>
         <div class='flex-container'>
-          <p>WordBuilder Intervention is a free application in the <a href='https://apple.com/'>Apple App Store</a>, the <a href='https://play.google.com/store/apps/details?id=org.napacoe.wordbuilder'>Google Play Store</a> & <a href='http://bit.ly/wordbuilder_int'>The Amazon Store!</a> and a free web version on <a href='https://calireads.org/wordbuilder/'>CALI Reads Wordbuilder</a>. The WordBuilder Intervention course demonstrates how to effectively and systematically deliver teacher-led, small group instruction using this tool to teach struggling readers how to break down, build, and spell multisyllabic words.  </p>
+          <p>WordBuilder Intervention is an instructional tool to help adolescent struggling readers break down multisyllabic words. </p>
+           The WordBuilder Intervention course demonstrates how to effectively and systematically deliver teacher-led, small group instruction using this tool to teach struggling readers how to break down, build, and spell multisyllabic words.  </p>
           <LaunchButton url='https://calireads.org/modules/wordbuilder/wordbuilder-full-program/content/'/>
         <h4>The WordBuilder Intervention course has 4 sections:</h4>
        <ul>
