--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,4 +15,11 @@ import Favicon from '../images/iconified/favicon.ico';
     <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap' rel='stylesheet'>
     <link rel="shortcut icon" href={Favicon} type="image/x-icon" />
     <title>{title}</title>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P462NCP');</script>
+    <!-- End Google Tag Manager -->
 </head>
