fix module links

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -20,7 +20,7 @@ import { Icon } from 'astro-icon';
                 <p><strong>Why:</strong> AR Guides support comprehension of complex text and use of textual evidence. They have been proven to be an effective tool with middle school students across content areas and when used in classroom, intervention, and special education settings (Duffelmeyer 1994; Kozen, Murray, and Windell 2006).</p>
 
                 <div class='module-launch'>
-                    <a href='/modules#ARGuides' class='btn'>
+                    <a href='/literacy-modules#ARGuides' class='btn'>
                         <h2>Go To Anticipation Reaction Guides Literacy Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                 </div>
             
