--- a/src/pages/get-the-gist.astro
+++ b/src/pages/get-the-gist.astro
@@ -22,7 +22,7 @@ import { Icon } from 'astro-icon';
                 <p><strong>Why: </strong>The Get the Gist strategy teaches students to monitor their comprehension during reading by thinking about the text’s main focus and supporting details, which supports students’ overall reading comprehension and content area learning. The research base of CSR demonstrates strong reading comprehension effects across different adolescent populations: students with learning disabilities, limited English proficient students, average and high achieving students (Klingner & Vaughn, 1999).</p>
 
                  <div class='module-launch'>
-                    <a href='/modules#GTG' class='btn'>
+                    <a href='/literacy-modules#GTG' class='btn'>
                         <h2>Go To Get The Gist Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                 </div>
 
