--- a/src/pages/morphology.astro
+++ b/src/pages/morphology.astro
@@ -27,7 +27,7 @@ import MorphologyVideo from '../components/MorphologyVideo.astro';
             <p>Why: The English language contains up to 1,000,000 individual words. The vast majority of academic vocabulary words contain Latin or Greek roots and affixes (prefixes and suffixes), with one root generating as many as 5-20 additional meaning related words, commonly referred to as morphological word families. The representation of morphemes within words provides important clues to the word’s meaning. Thus, effective vocabulary instruction should include explicit instruction in English morphology, prefixes, suffixes and roots. The benefits of morphology instruction include morphological awareness, use of spelling-meaning connections to derive word meaning, and word consciousness.</p>
 
             <div class='module-launch'>
-                <a href='/modules#morphology' class='btn'>
+                <a href='/literacy-modules#morphology' class='btn'>
                     <h2>Go To Anticipation Reaction Guides Literacy Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
             </div>
 
