--- a/src/pages/reciprocal-teaching.astro
+++ b/src/pages/reciprocal-teaching.astro
@@ -18,7 +18,7 @@ import RTVideo from '../components/RTVideo.astro';
                 <h2 >Reciprocal Teaching</h2>
                     <p>Reciprocal Teaching (RT) is a cooperative learning routine that incorporates four high leverage reading comprehension strategies: Predicting, Questioning, Clarifying, and Summarizing (Palinscar & Brown, 1984). When using RT, students participate in teacher scaffolded, student-led discussion groups around a grade level text. The Reciprocal Teaching routine equips students with a procedure for reading complex text that deepens their understanding and learning. RT also fosters active engagement and independent reading. It is a widely researched reading comprehension routine that has demonstrated strong efficacy for elementary and adolescent students, across subject area texts, and with various student populations such as general education, at risk, special education and English language learners.</p>
                     <div class='module-launch'>
-                        <a href='/modules#ReciprocalTeaching' class='btn'>
+                        <a href='/literacy-modules#ReciprocalTeaching' class='btn'>
                             <h2>Go To Reciprocal Teaching Literacy Courses</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                     </div>
                     <div class='section-title'>
