--- a/src/pages/vocabulary-maps.astro
+++ b/src/pages/vocabulary-maps.astro
@@ -17,7 +17,7 @@ import walkthroughImg from '../images/Vocabulary-Maps-Walkthrough.jpg';
           <p><strong>Why:</strong> Explicit vocabulary instruction is beneficial in developing reading skills, academic vocabulary, and building meaning from text (Kamil et al., 2008; Hattie, 2009). It is especially critical for struggling readers who haven’t built robust vocabularies from extensive reading and who struggle to utilize contextual clues to decipher word meaning (Beck, McKeown, & Kucan, 2002). Studies have shown middle school reading interventions that include the preteaching of essential vocabulary words activate background knowledge and build vocabulary and text comprehension (Vaughn et al., 2013; Swanson et al., 2015).</p>
 
           <div class='module-launch'>
-            <a href='/modules#vocabModules' class='btn'>
+            <a href='/literacy-modules#vocabModules' class='btn'>
                 <h2>Go To The Vocabulary Maps Courses</h2>
                 <Icon name="jam:arrow-circle-right" width='40'/>
             </a>
