--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -20,7 +20,7 @@ import { Icon } from 'astro-icon';
             </p>
             <p><strong>Why:</strong> The SGQs strategy has been shown to be effective with middle school students in general education content classes, reading intervention classes for students who have reading disabilities, and classes for English learners (Vaughn et al., 2006). It can be used across content domains such as English Language Arts, Science, and Social Studies. The SGQs strategy promotes self-monitoring during reading, increases reading comprehension, text connections, and retention of important concepts and details (Vaughn et al., 2011).</p>
             <div class='module-launch'>
-                <a href='/modules#SGQmodules' class='btn'>
+                <a href='/literacy-modules#SGQmodules' class='btn'>
                     <h2>Go To Self-Generated Questions Courses </h2>&nbsp; 
                     <Icon name="jam:arrow-circle-right" width='40'/>
                 </a>
