--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -6,7 +6,7 @@ import Showcase from '../components/Showcase.astro';
 import ARGuideTemplate from '../images/AR_Guide_Template-980x729.png';
 import ARGuidePDF from '/public/pdfs/AR-Guide-Template.pdf';
 import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
-//import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon';
 
 ---
 <Layout title="Anticipation Reaction Guide">
