--- a/src/layouts/ModuleLayout.astro
+++ b/src/layouts/ModuleLayout.astro
@@ -16,7 +16,7 @@ import '../styles/global.css';
  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="CALI Reads is a project funded by the Office of Special Education in partnership with the California Department of Education, Special Education Division. The project is coordinated and administered through the Napa County Office of Education. ">
+    <meta name="description" content="Training, Literacy Modules, Anticipation Reaction Guides, Get The Gist, Morphology, Reciprocal Teaching, Self-Generated Questions, Vocabulary Maps, Wordbuilder intervention">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href='../fonts/Poppins/poppins-regular-webfont.woff2' as="font" type="font/woff2" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap' rel='stylesheet'>
@@ -24,11 +24,11 @@ import '../styles/global.css';
     
     <title>{title}</title>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-P462NCP');</script>
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P462NCP');</script>
   <!-- End Google Tag Manager -->
 </head>
 <body>
