--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,7 +14,7 @@ import Favicon from '../images/iconified/favicon.ico';
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href='../fonts/Poppins/poppins-regular-webfont.woff2' as="font" type="font/woff2" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap' rel='stylesheet'>
-    <link rel="shortcut icon" href={Favicon} type="image/x-icon" />
+    <link rel="icon" href={Favicon} type="image/x-icon" />
     <title>{title}</title>
     <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
