edits to 404 page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,5 +13,6 @@ import bookImage from '../images/CR_logo_sm_V_rgb.png';
         <h2>404!!</h2>
         <h2><a href='/index.html' aria-label="Go back to CALIREADS"><img src={bookImage} alt=""></a></h2>
         <h2>Page Not Found</h2>
+        <p>We have made a lot of changes to our website lately. <a href="index.html#features">Are you looking for literacy strategies?</a></p>
 </section>
 </Layout>
