edits to 404 page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Showcase from '../components/Showcase.astro';
 
 import bookImage from '../images/CR_logo_sm_V_rgb.png';
-
+import HTMLButton from '../components/HTMLButton.astro';
 ---
 
 
@@ -13,6 +13,15 @@ import bookImage from '../images/CR_logo_sm_V_rgb.png';
         <h2>404!!</h2>
         <h2><a href='/index.html' aria-label="Go back to CALIREADS"><img src={bookImage} alt=""></a></h2>
         <h2>Page Not Found</h2>
-        <p>We have made a lot of changes to our website lately. <a href="index.html#features">Are you looking for literacy strategies?</a></p>
+        <p>We have made a lot of changes to our website lately.</p>
+        <p>Try one of these:</p>
+        <p><a href="https://calireads.org/index#features">Literacy Strategies</a> | <a href="https://calireads.org/literacy-modules">E-Learning Courses</a> | <a href="https://calireads.org/wordbuilder/" target="_blank">Wordbuilder</a></p>
 </section>
 </Layout>
+
+<style>
+
+    .page-content p{
+        text-align: center;
+    }
+</style>
