--- a/src/components/WordParts.astro
+++ b/src/components/WordParts.astro
@@ -10,7 +10,7 @@ import WordPartsdata from '../data/WordPartsData.json';
 
     <div class="container">
       {WordPartsdata.map(feature => (
-       <Card dark={true} title={feature.title} body={} url={feature.url}   />
+       <Card dark={true} title={feature.title} body={} arial-label={feature.title} url={feature.url}   />
       ))}
     </div>
   </section>
