font load issue

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import '../styles/global.css';
 ---
     <BaseHead title={title} />
     <body>
-    <a href='#page-content' class='skipLink' aria-label='skip to content'>skip to content</a>
+    <a href='#page-content' class='skipLink' aria-label='skip to content' title="skip to main content">skip to content</a>
     <div class='top-container' id='top-container'>
         <Header />
     </div>
